--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -18,6 +18,22 @@ body {
 	font-family: 'Raleway', 'Arial', sans-serif;
 }
 
+.title {
+	text-align: center;
+	color: white;
+}
+
+.title h1 {
+	font-size: 7em;
+    font-family: 'Pacifico';
+}
+
+.title span {
+	font-size: 3em;
+	font-style: italic;
+	font-family: 'Dancing Script', cursive;
+}
+
 .countdown-container {
 	position: relative;
 	top: 50%;
