--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -25,21 +25,23 @@ body {
 
 .title h1 {
 	font-size: 7em;
-    font-family: 'Pacifico';
+	font-family: 'Pacifico';
+	width: 100%;
 }
 
 .title span {
 	font-size: 3em;
 	font-style: italic;
 	font-family: 'Dancing Script', cursive;
+	width: 100%;
 }
 
 .countdown-container {
 	position: relative;
-	top: 50%;
-	-webkit-transform: translateY(-50%);
-	-moz-transform: translateY(-50%);
-	transform: translateY(-50%);
+	top: 45%;
+	-webkit-transform: translateY(-45%);
+	-moz-transform: translateY(-45%);
+	transform: translateY(-45%);
 
 }
 
