--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -79,6 +79,15 @@ body {
 	font-size: 20px;
 }
 
+.img-circle {
+	border-radius: 50%;
+	width: 75px;
+}
+
+.hidden {
+	display: none;
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
 	.clock-item {
 		margin-bottom: 30px;		
